# Gateman

./: .gitignore  Cargo.toml  README.md  build.sh
resources/config/: logging.yml
resources/definitions/api_def/: foo_api.json  sample_api_def.json
resources/definitions/origin_def/: origin.json
resources/file_utils_test/: Sample
resources/scripts/: create_self_signed_tls_cert.sh
resources/scripts/cert/: certificate.crt  private.key
src/: main.rs
src/configuration_reader/: api_def_reader.rs  mod.rs  origin_def_reader.rs
src/core/: mod.rs  read_config.rs  reverse_proxy.rs  router.rs  standard_response.rs  tls_reverse_proxy.rs
src/core/config/: config_mgr.rs  config_mgr_proxy_api.rs  mod.rs  read_config.rs
src/core/rate_limiter/: mod.rs  rate_limiter_api.rs  rate_limiting_engine.rs
src/file_utils/: file_error.rs  file_reader.rs  file_writer.rs  mod.rs
src/utils/: path_utils.rs
