[package]
name = "gateman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23" }
rustls-pemfile = "0.3"
async-stream = "0.3"
governor = { version = "0.4" }
nonzero_ext = "0.3"
log4rs = { version = "1" }
log = { version = "0.4", features = ["std"] }
glob = { version = "0.3" }